# x-arm

./: .gitignore
data/: angle_error.txt  angle_pos_error.txt  leye-excuse.avi  leye.avi  steamVRinstall.README
data/handeye/eyetracker/: joint6_tracker2.yml
data/kinematicReachability20190212/: hdf5DataProccess.ipynb  readme.txt
data/reconstruction/640_new/: extrinsics.yml  intrinsics.yml
data/reconstruction/640_old/: extrinsics.yml  intrinsics.yml
scripts/: camera_all.sh  vive_tracker_py.sh
src/IK_fast_solver/: CMakeLists.txt  package.xml
src/IK_fast_solver/include/: IK_fast_solver.h
src/IK_fast_solver/scripts/: grasp_sever.py  x_arm.py
src/IK_fast_solver/src/: IK_fast_solver.cpp
src/IK_fast_solver/srv/: calib.srv  grasp.srv
src/camera/usbcam/launch/: usbcam_eye.launch  usbcam_scene.launch  usbcam_single_node.launch
src/camera/usbcam/src/: usbcam_node.cpp
src/darknet_ros/darknet_ros/include/darknet_ros/: YoloObjectDetector.hpp
src/darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
src/data_obtain/: CMakeLists.txt  package.xml
src/data_obtain/include/: error_analysis.h  error_analysis_back.h
src/data_obtain/src/: error_analysis.cpp  error_analysis_back.cpp
src/dope/config/: config_pose.yaml  ls_640.yaml  ls_640_coffee.yaml
src/dope/src/: camera.py
src/eyetracking/eyetracking/: CMakeLists.txt
src/eyetracking/eyetracking/src/: eyetracking_node.cpp
src/macaca_eyescene_map/: CMakeLists.txt  package.xml
src/macaca_eyescene_map/src/: colorblock.cpp
src/macaca_tf_setup/launch/: tf_setup.launch
src/macaca_tf_setup/src/: macaca_tf_setup_node.cpp
src/reconstructure/: CMakeLists.txt  package.xml
src/reconstructure/include/reconstructure/: reconstructure.h
src/reverse_kinematics/: CMakeLists.txt  package.xml
src/reverse_kinematics/include/: reverse_kinematics.h  reverse_kinematics1.h
src/reverse_kinematics/include/reverse_kinematics/: querySolutions.h  querySolutionsRequest.h  querySolutionsResponse.h  solution.h  solutions.h
src/reverse_kinematics/msg/: solutions.msg
src/reverse_kinematics/scripts/: reverse_kinematics_server.py
src/reverse_kinematics/src/: addObject.cpp  collisionCheck.cpp  moveit_angle_compensation.cpp  moveit_angle_compensation1.cpp  reverse_kinematics_angle_compensation.cpp  reverse_kinematics_onestep.cpp  reverse_kinematics_pos_compensation.cpp
src/reverse_kinematics/srv/: querySolutions.srv
src/roi_reconstructure/: CMakeLists.txt
src/roi_reconstructure/include/roi_reconstructure/: roi_reconstructure.h
src/roi_reconstructure/src/: roi_reconstructure.cpp
src/vive_tracker_py/scripts/: openvr_tracker.py  triad_openvr.py
src/x_arm/: CMakeLists.txt  package.xml  urdf.rviz
src/x_arm/config/: joint_names_x_arm.yaml
src/x_arm/launch/: display.launch  gazebo.launch
src/x_arm/meshes/: base_link.STL  index0.STL  index1.STL  index2.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL  little0.STL  little1.STL  little2.STL  middle0.STL  middle1.STL  middle2.STL  wedding0.STL  wedding1.STL  wedding2.STL
src/x_arm/robots/: readme.txt  sh  x_arm.dae  x_arm.urdf  x_arm.xml  x_arm_calib.dae  x_arm_calib.urdf  x_arm_calib.xml  x_arm_with_calib.urdf
src/x_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/x_arm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  x_arm.srdf
src/x_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  x_arm_moveit_controller_manager.launch.xml
